[package]
name = "cuda-fleet-mesh"
version = "0.1.0"
edition = "2021"
description = "Fleet mesh with 5 topologies and gossip protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-fleet-mesh"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

